--- a/lesson3.html
+++ b/lesson3.html
@@ -28,7 +28,7 @@
         <li>India
             <ol>
                 <li>Gujarat</li>
-                <li>Pumjab</li>
+                <li>Punjab</li>
                 <li>MP</li>
                 <li>UP</li>
             </ol>
