--- a/lesson4.html
+++ b/lesson4.html
@@ -9,31 +9,36 @@
 <body>
     <h1>Example of table</h1> <hr>
     <table border="2" cellpadding=5 cellspacing=5 width=50% align="center">
-        <tr>
+        <tr bgcolor='#F5EED2'>
             <td>Sr No</td>
             <td>Name</td>
             <td>email</td>
             <td>mobile</td>
         </tr>
-        <tr>
+        <tr bgcolor='#FFEC1C'>
             <td>1</td>
-            <td>shiv</td>
+            <td bgcolor="#695128"><font color='white'>shiv</font></td>
             <td>shiv@gmail.com</td>
             <td>1234567890</td>
         </tr>
-        <tr>
+        <tr bgcolor='#FFF8A9'>
             <td>2</td>
             <td>vishnu</td>
             <td>vishnu@gmail.com</td>
             <td>1231231231</td>
         </tr>
-        <tr>
+        <tr bgcolor='#FFEC1C'>
             <td>3</td>
             <td>Bramha</td>
             <td>bramha@gmail.com</td>
             <td>4564564564</td>
         </tr>
-        
+        <tr bgcolor='#FFF8A9'>
+            <td>2</td>
+            <td>ganesh</td>
+            <td>vishnu@gmail.com</td>
+            <td>1231231231</td>
+        </tr>
     </table>
 </body>
 </html>
