--- a/lesson6.html
+++ b/lesson6.html
@@ -13,8 +13,20 @@
     <img src="images/laptop.jpg" alt="" height='200px' >
     <img src="images/macbook.jpg" alt="" height='200px' >
     <img src="images/mobile.jpg" alt="" height='200px' >
-
-
-    
+    <h2 title="it is link">Links</h2> <hr>
+    <a href="lesson1.html">First Lesson</a>
+    <a href="lesson2.html">Second Lesson</a>
+    <a href="lesson3.html">Third Lesson</a>
+    <a href="lesson4.html" target=blank title="a new tab will open">Fourth Lesson</a>
+    <a href="lesson5.html">
+        <img src="images/camera.jpg" alt="">
+    </a>
+    <a href="docs/myfile.doc">download file</a>
+    <a href="http://www.google.com" target="blank"><b><i>Google</i></b></a>
+    <h2>videos</h2>
+    <h4>steav job</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/h5ldOEyZPd4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h4>Chankya</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PFnJvUNK6t0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
